<resources>
    <string name="app_name">Instagram</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="sign_in_button">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="promt_display_name">Display name</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="post_notification_channel_id">fcm_default_channel</string>
    <string name="notification_title">Instagram</string>
    <string name="post_notification_channel_name">Post</string>
    <string name="create_account_button">Create an account</string>
    <string name="follow">Follow</string>
    <string name="message">Message</string>
    <string name="reply">Reply</string>
    <string name="create_account">Create account</string>
    <string name="user_website">&lt;b href=%1$s>%1$s&lt;/b></string>
    <string name="edit_profile">Edit Profile</string>
    <string name="comments">Comments</string>
    <string name="new_post">New post</string>
    <string name="write_a_caption">Write a caption...</string>
    <string name="tag_people">Tag people</string>
    <string name="add_location">Add location</string>
    <string name="also_post_to">Also post to</string>
    <string name="facebook">Facebook</string>
    <string name="twitter">Twitter</string>
    <string name="tumblr">Tumblr</string>
    <string name="advanced_settings">Advanced settings</string>
    <string name="posts">Posts</string>
    <string name="following">Following</string>
    <string name="notifications">Notifications</string>
    <plurals name="likeCount">
        <item quantity="one">%s like</item>
        <item quantity="other">%s likes</item>
    </plurals>
    <plurals name="dateInSecond">
        <item quantity="one">%d second ago</item>
        <item quantity="other">%d seconds ago</item>
    </plurals>
    <plurals name="dateInMinute">
        <item quantity="one">%d minute ago</item>
        <item quantity="other">%d minutes ago</item>
    </plurals>
    <plurals name="dateInHour">
        <item quantity="one">%d hour ago</item>
        <item quantity="other">%d hours ago</item>
    </plurals>
    <plurals name="dateInDay">
        <item quantity="one">%d day ago</item>
        <item quantity="other">%d days ago</item>
    </plurals>
    <plurals name="dateInWeek">
        <item quantity="one">%d week ago</item>
        <item quantity="other">%d weeks ago</item>
    </plurals>
    <plurals name="commentCount">
        <item quantity="one">View %s comment</item>
        <item quantity="other">View all %s comments</item>
    </plurals>
</resources>